--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "watch": "vite build --watch",
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.3.2",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "sass": "^1.77.2",
+        "typescript": "^5.4.5",
         "vite": "^5.0"
     }
 }
