--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "sass": "^1.77.2",
         "typescript": "^5.4.5",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@uiw/react-textarea-code-editor": "^3.0.2"
     }
 }
