--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@uiw/react-textarea-code-editor": "^3.0.2"
+        "@uiw/react-textarea-code-editor": "^3.0.2",
+        "dompurify": "^3.1.5"
     }
 }
