--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
         "@types/react": "^18.3.2",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.38",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sass": "^1.77.2",
+        "tailwindcss": "^3.4.4",
         "typescript": "^5.4.5",
         "vite": "^5.0"
     },
