--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@splidejs/splide": "^4.1.4",
         "@uiw/react-textarea-code-editor": "^3.0.2",
         "dompurify": "^3.1.5"
     }
