--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.20",
         "@splidejs/splide": "^4.1.4",
         "@uiw/react-textarea-code-editor": "^3.0.2",
         "dompurify": "^3.1.5",
